--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
+
 {
-  "name": "ats-master:-resume-reviewer-&-builder",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "ats-master",
+  "version": "1.0.0",
   "dependencies": {
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.34.0",
+    "pdfjs-dist": "^4.0.379",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
-    "jspdf": "^2.5.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.562.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
