chore: Improve .gitignore for broader exclusion
Adds exclusions for environment files and OS-specific files to prevent accidental commits. Also reorganizes and expands exclusions for common build outputs and dependency directories.

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,20 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.env
+*.env.*
 
-# Logs
+# Dependencies
+node_modules/
+jspm_packages/
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+out/
+
+# Debug logs
 logs
 *.log
 npm-debug.log*
@@ -14,18 +26,20 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# OS files
+Thumbs.db
+desktop.ini
+
+# Testing
+/coverage
